# AEON-IQ

./: .dockerignore  .env.example  .gitignore  AEON-IQ_BUILD_BLUEPRINT.md  AGENTS.md  CLAUDE.md  CONTEXT_TRANSFER.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  mock_openai_server.py  run_tests.py  test_memory.py
.github/workflows/: benchmarks.yml  ci.yml  publish.yml
benchmarks/: README.md  requirements.txt
benchmarks/k6/: proxy_latency.js  retrieval_latency.js
benchmarks/scripts/: ci_benchmark_proof.sh  common.py  run_all.ps1  run_all.sh  run_latency.py  run_narrative_archival.py  run_recall_quality.py  run_temporal_correctness.py  run_token_savings.py  summarize_results.py
benchmarks/seed/: benchmark_dataset.json  seed_memories.py
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
dashboard/src/: auth.ts  middleware.ts
dashboard/src/app/: agents-table.tsx  layout.tsx  page.tsx
dashboard/src/app/api/agents/: route.ts
dashboard/src/app/api/agents/[id]/: route.ts
dashboard/src/app/api/agents/[id]/archival/batches/: route.ts
dashboard/src/app/api/agents/[id]/archival/trigger/: route.ts
dashboard/src/app/api/agents/[id]/conflicts/: route.ts
dashboard/src/app/api/agents/[id]/export/: route.ts
dashboard/src/app/api/agents/[id]/import/: route.ts
dashboard/src/app/api/agents/[id]/memories/: route.ts
dashboard/src/app/api/agents/[id]/memories/archived/: route.ts
dashboard/src/app/api/agents/[id]/memories/at/: route.ts
dashboard/src/app/api/agents/[id]/memories/bulk/: route.ts
dashboard/src/app/api/agents/[id]/retrievals/: route.ts
dashboard/src/app/api/agents/[id]/sessions/: route.ts
dashboard/src/app/api/conflicts/[id]/resolve/: route.ts
dashboard/src/app/api/feedback/: route.ts
dashboard/src/app/api/memories/[id]/: route.ts
dashboard/src/app/api/memories/[id]/restore/: route.ts
dashboard/src/app/api/memories/[id]/sensitivity/: route.ts
dashboard/src/app/api/memories/[id]/status/: route.ts
dashboard/src/app/api/memories/[id]/versions/: route.ts
dashboard/src/app/api/stats/: route.ts
dashboard/src/app/cognition/: client.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/memory-explorer/: client.tsx  page.tsx
dashboard/src/components/: nav.tsx
dashboard/src/lib/: backend.ts
dashboard/src/types/: next-auth.d.ts
docker/grafana/dashboards/: memoryos.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/prometheus/: prometheus.yml
docs/: BENCHMARKS.md  HNSW_MAINTENANCE.md  VALIDATION_v0.1.0.md
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
migrations/: 0001_initial.sql  0002_ltm_archival.sql  0003_hardening.sql  0004_decay.sql  0005_importance.sql  0006_archival_versioning.sql  0007_archival_failed_status.sql  0007_graph_retrieval.sql  0008_entity_disambiguation.sql  0008_memory_updated_at.sql  0009_structured_working_memory.sql  0012_memory_conflicts.sql  0013_fix_float_types.sql  0014_amp_memory_pressure.sql  0015_co_access_edges.sql  0016_retrieval_feedback.sql  0017_rmk_policies.sql  0018_rmk_episodes.sql  0019_memory_status_sensitivity.sql  0020_memory_versions.sql  0021_memory_retrieval_logs.sql  0022_extraction_outbox.sql  0023_cognitive_hypervisor_timeline.sql  0024_timeline_branch_chain.sql
sdks/python/: README.md  pyproject.toml
sdks/python/aeon_iq/: __init__.py  client.py  models.py
sdks/typescript/: README.md  package.json
sdks/typescript/scripts/: build-esm.js
sdks/typescript/src/: client.ts  index.ts  types.ts
src/: api.rs  archival.rs  auth.rs  config.rs  db.rs  embeddings.rs  extraction_worker.rs  hnsw_maintenance.rs  log_utils.rs  main.rs  metrics.rs  models.rs  providers.rs  proxy.rs  rate_limit.rs  rmk_worker.rs  url_guard.rs
src/memory/: conflicts.rs  extraction.rs  mod.rs  retrieval.rs  store.rs
src/memory/amp/: augmenter.rs  co_access.rs  config.rs  mod.rs  pi_controller.rs  pressure.rs  types.rs  utility.rs
src/memory/rmk/: adapter.rs  buffer.rs  config.rs  meta_learner.rs  mod.rs  policy.rs  reward.rs  store.rs
(+4 files in other folders)
