[package]
name = "memoryos-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memoryos"
path = "src/main.rs"

[dependencies]
# Web framework
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
tokio-stream    = "0.1"

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# IDs and time
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }

# Error handling
anyhow    = "1"
thiserror = "1"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async utilities
futures = "0.3"
bytes   = "1"

# Config
dotenvy = "0.15"

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
