[package]
name = "memoryos-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memoryos"
path = "src/main.rs"

[dependencies]
# Web framework
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
tokio-stream    = "0.1"

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Database
sqlx = { version = "0.9", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# IDs and time
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }

# Error handling
anyhow    = "1"
thiserror = "1"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus          = { version = "0.13", features = ["process"] }
once_cell           = "1"

# Middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async utilities
futures = "0.3"
bytes   = "1"

# Config
dotenvy = "0.15"
dashmap  = "6"

# RMK ε-greedy exploration
rand = "0.8"

# Constant-time comparisons (prevent timing side-channels in auth)
subtle = "2"

# SHA-256 for query hashing in retrieval logs
sha2 = "0.10"
hex  = "0.4"

[dev-dependencies]
# No extra crates needed: sqlx's #[sqlx::test] is enabled by the `migrate`
# feature already declared in [dependencies], and tokio is already full-featured.

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
