[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeon-iq"
version = "0.1.0"
description = "Python client SDK for AEON-IQ MemoryOS — persistent memory for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["memory", "agent", "ai", "llm", "aeon-iq", "memoryos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/adaptive-liquidity/aeon-iq"
Repository = "https://github.com/adaptive-liquidity/aeon-iq"
Documentation = "https://github.com/adaptive-liquidity/aeon-iq/tree/main/sdks/python"

[tool.hatch.build.targets.wheel]
packages = ["aeon_iq"]
